[gd_scene load_steps=4 format=3 uid="uid://dotchy16q2nxp"]

[ext_resource type="Script" path="res://scenes/enemy_bullet_2.gd" id="1_ev2tf"]
[ext_resource type="Texture2D" uid="uid://cqmiet745wavf" path="res://assets/SimpleBullet.png" id="2_enj2l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_53oa2"]
size = Vector2(10, 10)

[node name="EnemyBullet2" type="Area2D" groups=["bullets"]]
process_mode = 1
z_index = 1
collision_layer = 8
collision_mask = 7
script = ExtResource("1_ev2tf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_enj2l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_53oa2")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
